--- a/script_audiogpt.ipynb
+++ b/script_audiogpt.ipynb
@@ -88,9 +88,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\Gabriel\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.11_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python311\\site-packages\\whisper\\__init__.py:150: FutureWarning: You are using `torch.load` with `weights_only=False` (the current default value), which uses the default pickle module implicitly. It is possible to construct malicious pickle data which will execute arbitrary code during unpickling (See https://github.com/pytorch/pytorch/blob/main/SECURITY.md#untrusted-models for more details). In a future release, the default value for `weights_only` will be flipped to `True`. This limits the functions that could be executed during unpickling. Arbitrary objects will no longer be allowed to be loaded via this mode unless they are explicitly allowlisted by the user via `torch.serialization.add_safe_globals`. We recommend you start setting `weights_only=True` for any use case where you don't have full control of the loaded file. Please open an issue on GitHub for any issues related to this experimental feature.\n",
+      "  checkpoint = torch.load(fp, map_location=device)\n",
+      "C:\\Users\\Gabriel\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.11_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python311\\site-packages\\whisper\\transcribe.py:126: UserWarning: FP16 is not supported on CPU; using FP32 instead\n",
+      "  warnings.warn(\"FP16 is not supported on CPU; using FP32 instead\")\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -128,7 +138,7 @@
     "\n",
     "# Função para gerar um relatório detalhado\n",
     "def gerar_relatorio_detalhado(texto):\n",
-    "    prompt = f\"Escreva um relatório detalhado sobre o seguinte conteúdo: {texto}\"\n",
+    "    prompt = f\"Sabendo que se trata de um texto que sera encaminhado para uma secretaria municipal. Primeiro classifique o texto em algumas dessas opções: Meio Ambiente, Educação, Fazenda, Infraestrutura, Abastecimento pesca e agricultura, Turismo, Saúde, Esporte. Depois escreva uma subcategoria. Em seguida defina o tema principal abordado. Após esses dois passos, faça um resumo bem objetivo. Um exemplo hipotetico seria: Categoria: infraestrutura Subcategoria: praças Tema: iluminação Assunto principal: “puxar do texto”. De acordo com o que informei, realize o processo com o seguinte conteúdo: {texto}\"\n",
     "    \n",
     "    # Fazendo a chamada à API da OpenAI\n",
     "    response = client.chat.completions.create(\n",
@@ -153,15 +163,15 @@
     "    \n",
     "    # Salvar transcrição e relatório em um arquivo .txt\n",
     "    with open(\"resultado_audio.txt\", \"w\", encoding=\"utf-8\") as arquivo:\n",
-    "        arquivo.write(\"Transcrição:\\n\")\n",
-    "        arquivo.write(transcricao + \"\\n\\n\")\n",
+    "        # arquivo.write(\"Transcrição:\\n\")\n",
+    "        # arquivo.write(transcricao + \"\\n\\n\")\n",
     "        arquivo.write(\"Relatório Detalhado:\\n\")\n",
     "        arquivo.write(relatorio)\n",
     "        \n",
     "    print(\"Processamento concluído. Confira 'resultado_audio.txt' para o relatório completo.\")\n",
     "\n",
     "# Exemplo de uso com um arquivo mp3\n",
-    "arquivo_audio = \"C:\\\\Users\\\\Gabriel\\\\www\\\\ExerciciosPython\\\\audio_teste.opus\"  # substitua pelo caminho do seu arquivo de áudio\n",
+    "arquivo_audio = \"C:\\\\Users\\\\Gabriel\\\\www\\\\AudioAI\\\\audio_teste2.opus\"  # substitua pelo caminho do seu arquivo de áudio\n",
     "processar_audio(arquivo_audio)\n"
    ]
   }
